--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -17,7 +17,7 @@
           </p>
           <div class="grid md:grid-cols-2 gap-4 text-sm uppercase font-medium">
             <a href="{% url 'main_store' %}" class="group">
-              <div class="bg-gradient-to-r from-cyan-600 to-emerald-600 group-hover:bg-white text-white group-hover:text-sky-600 border border-transparent group-hover:border-sky-500 py-3 px-6 rounded-lg shadow-md group-hover:shadow-lg transition duration-300 ease-in-out flex items-center justify-center">
+              <div class="bg-sky-600 group-hover:bg-white text-white group-hover:text-sky-600 border border-transparent group-hover:border-sky-500 py-3 px-6 rounded-lg shadow-md group-hover:shadow-lg transition duration-300 ease-in-out flex items-center justify-center">
                 <i class="fas fa-warehouse mr-3 text-2xl group-hover:scale-110 transition-transform"></i>
                 <span>Main Store</span>
               </div>
