--- a/store/templates/store/restock_report.html
+++ b/store/templates/store/restock_report.html
@@ -25,7 +25,7 @@
 
     <div class="bg-white shadow overflow-hidden sm:rounded-lg mb-4">
         <div class="px-4 py-5 sm:p-6">
-            <form method="get" class="space-y-4" value="{{ field.value|default:'' }}">
+            <form method="get" class="space-y-4">
                 <div class="lg:flex lg:justify-center gap-4 grid grid-cols-2">
                     {% for field in restockfilter.form %}
                     <div>
