--- a/store/templates/store/dispensed_list.html
+++ b/store/templates/store/dispensed_list.html
@@ -16,7 +16,7 @@
     <!-- Filter Form -->
     <div class="bg-white shadow overflow-hidden sm:rounded-lg mb-4">
         <div class="px-4 py-5 sm:p-6">
-            <form method="get" class="space-y-4" value="{{ field.value}}">
+            <form method="get" class="space-y-4">
                 <div class="md:flex md:justify-center gap-4 grid grid-cols-2">
                     {% for field in dispensefilter.form %}
                     <div>
